--- a/templates/article.html
+++ b/templates/article.html
@@ -26,6 +26,10 @@
             </div>
         </header>
 
+        <div class="featured-image reveal">
+            <div class="image-placeholder">Featured Image for {{ title }}</div>
+        </div>
+
         <div class="content-wrapper reveal">
              {% if toc %}
             <aside class="toc-container">
@@ -62,8 +66,8 @@
             </div>
 
              <div class="center-btn" style="margin-top: 2rem; text-align: center;">
-                 <a href="index.html" class="btn btn-secondary">Back to Home</a>
-            </div>
+                  <a href="index.html#{{ category }}" class="btn btn-secondary">Back to {{ category|title }}</a>
+             </div>
         </div>
     </div>
 </article>
