--- a/templates/base.html
+++ b/templates/base.html
@@ -70,9 +70,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/gallery.js"></script>
-    <script src="assets/js/back-to-top.js"></script>
+    <script src="assets/js/bundled.min.js"></script>
 
     <script>
          // Dark Mode Toggle Logic (Simple implementation to match memory)
